syntax = "proto3";

package blog;
cd

message Blog {
	string id = 1;
	string author_id = 2;
	string title = 3;
	string conttent = 4;
}

message CreateBlogRequest {
	Blog blog = 1; // no id
}

message CreateBlogResponse {
	Blog blog = 1; //with id
}

message ReadBlogRequest {
	string blog_id = 1;
}

message ReadBlodResponse {
	Blog blog = 1;
}

message UpdateBlogRequest {
	Blog blog = 1;
}

message UpdateBlogResponse {
	Blog blog = 1;
}

message DeleteBlogRequest {
	string blog_id = 1;
}

message DeleteBlogResponse {
	string blog_id = 1;
}

message ListBlogRequest {

}

message ListBlogResponse{
	Blog blog = 1;
}

service BlogService {
	rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {

	}

	rpc ReadBlog (ReadBlogRequest) returns (ReadBlodResponse) {

	}

	rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse) {

	}

	rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogResponse){

	}

	rpc ListBlog (ListBlogRequest) returns (stream ListBlogResponse){

	}
}